--- a/formats/climate_conscious_urban_realism_nature_civilization_complete.html
+++ b/formats/climate_conscious_urban_realism_nature_civilization_complete.html
@@ -175,122 +175,11 @@
 <header id="title-block-header">
 <h1 class="title">The Urban Watershed</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#chapter-1" id="toc-chapter-1"><strong>Chapter
-1</strong></a></li>
-<li><a href="#chapter-2" id="toc-chapter-2"><strong>Chapter
-2</strong></a></li>
-<li><a href="#chapter-3" id="toc-chapter-3"><strong>Chapter
-3</strong></a></li>
-<li><a href="#chapter-4" id="toc-chapter-4">Chapter 4</a>
-<ul>
-<li><a href="#chapter-4-1" id="toc-chapter-4-1"><strong>Chapter
-4</strong></a></li>
-</ul></li>
-<li><a href="#chapter-5" id="toc-chapter-5">Chapter 5</a>
-<ul>
-<li><a href="#chapter-5-1" id="toc-chapter-5-1"><strong>Chapter
-5</strong></a></li>
-</ul></li>
-<li><a href="#chapter-6" id="toc-chapter-6">Chapter 6</a>
-<ul>
-<li><a href="#chapter-6-1" id="toc-chapter-6-1"><strong>Chapter
-6</strong></a></li>
-</ul></li>
-<li><a href="#chapter-7" id="toc-chapter-7">Chapter 7</a>
-<ul>
-<li><a href="#chapter-7-1" id="toc-chapter-7-1"><strong>Chapter
-7</strong></a></li>
-</ul></li>
-<li><a href="#chapter-8" id="toc-chapter-8">Chapter 8</a>
-<ul>
-<li><a href="#chapter-8-1" id="toc-chapter-8-1"><strong>Chapter
-8</strong></a></li>
-</ul></li>
-<li><a href="#chapter-9" id="toc-chapter-9">Chapter 9</a>
-<ul>
-<li><a href="#chapter-9-1" id="toc-chapter-9-1"><strong>Chapter
-9</strong></a></li>
-</ul></li>
-<li><a href="#chapter-10" id="toc-chapter-10">Chapter 10</a>
-<ul>
-<li><a href="#chapter-10-1" id="toc-chapter-10-1"><strong>Chapter
-10</strong></a></li>
-</ul></li>
-<li><a href="#chapter-11" id="toc-chapter-11">Chapter 11</a>
-<ul>
-<li><a href="#chapter-11-1" id="toc-chapter-11-1"><strong>Chapter
-11</strong></a></li>
-</ul></li>
-<li><a href="#chapter-12" id="toc-chapter-12">Chapter 12</a>
-<ul>
-<li><a href="#chapter-32" id="toc-chapter-32"><strong>Chapter
-32</strong></a></li>
-</ul></li>
-<li><a href="#chapter-13" id="toc-chapter-13">Chapter 13</a>
-<ul>
-<li><a href="#chapter-13-1" id="toc-chapter-13-1"><strong>Chapter
-13</strong></a></li>
-</ul></li>
-<li><a href="#chapter-14" id="toc-chapter-14">Chapter 14</a>
-<ul>
-<li><a href="#chapter-14-1" id="toc-chapter-14-1"><strong>Chapter
-14</strong></a></li>
-</ul></li>
-<li><a href="#chapter-15" id="toc-chapter-15">Chapter 15</a>
-<ul>
-<li><a href="#chapter-15-1" id="toc-chapter-15-1"><strong>Chapter
-15</strong></a></li>
-</ul></li>
-<li><a href="#chapter-16" id="toc-chapter-16">Chapter 16</a>
-<ul>
-<li><a href="#chapter-16-1" id="toc-chapter-16-1"><strong>Chapter
-16</strong></a></li>
-</ul></li>
-<li><a href="#chapter-17" id="toc-chapter-17">Chapter 17</a>
-<ul>
-<li><a href="#chapter-17-1" id="toc-chapter-17-1"><strong>Chapter
-17</strong></a></li>
-</ul></li>
-<li><a href="#chapter-18" id="toc-chapter-18">Chapter 18</a>
-<ul>
-<li><a href="#chapter-18-1" id="toc-chapter-18-1"><strong>Chapter
-18</strong></a></li>
-</ul></li>
-<li><a href="#chapter-19" id="toc-chapter-19">Chapter 19</a>
-<ul>
-<li><a href="#chapter-19-1" id="toc-chapter-19-1"><strong>Chapter
-19</strong></a></li>
-</ul></li>
-<li><a href="#chapter-20" id="toc-chapter-20">Chapter 20</a>
-<ul>
-<li><a href="#chapter-20-1" id="toc-chapter-20-1"><strong>Chapter
-20</strong></a></li>
-</ul></li>
-<li><a href="#chapter-21" id="toc-chapter-21">Chapter 21</a>
-<ul>
-<li><a href="#chapter-21-1" id="toc-chapter-21-1"><strong>Chapter
-21</strong></a></li>
-</ul></li>
-<li><a href="#chapter-22" id="toc-chapter-22">Chapter 22</a>
-<ul>
-<li><a href="#chapter-22-1" id="toc-chapter-22-1"><strong>Chapter
-22</strong></a></li>
-</ul></li>
-<li><a href="#chapter-23" id="toc-chapter-23">Chapter 23</a>
-<ul>
-<li><a href="#chapter-23-1" id="toc-chapter-23-1"><strong>Chapter
-23</strong></a></li>
-</ul></li>
-<li><a href="#chapter-24" id="toc-chapter-24">Chapter 24</a>
-<ul>
-<li><a href="#chapter-24-1" id="toc-chapter-24-1"><strong>Chapter
-24</strong></a></li>
-</ul></li>
-</ul>
-</nav>
-<h2 id="chapter-1"><strong>Chapter 1</strong></h2>
+<div style="text-align:center;margin-bottom:2em">
+<img src="cover.jpg" alt="Cover" style="max-width:400px"/>
+</div>
+<h1 id="chapter-1">Chapter 1</h1>
+<h2 id="chapter-1-1"><strong>Chapter 1</strong></h2>
 <p>The rain in the city didn’t fall anymore; it arrived. It came in
 great, grey, horizontal sieves, scouring the glass and steel, finding
 every crack in the window seals of the old brick walk-ups. Leo Thorne
@@ -451,7 +340,8 @@ oldest law of nature, civilized or otherwise: adapt, or be removed.</p>
 <p>He breathed on the window, fogged a small circle, and in the center
 of it, with his fingertip, he drew a single, simple leaf.</p>
 <hr />
-<h2 id="chapter-2"><strong>Chapter 2</strong></h2>
+<h1 id="chapter-2">Chapter 2</h1>
+<h2 id="chapter-2-1"><strong>Chapter 2</strong></h2>
 <p>The roof was a kingdom of neglect and revelation. Leo pushed open the
 heavy steel door, its groan lost in the morning cacophony of the
 city—the metallic symphony of garbage trucks, the bass thump of a car
@@ -595,7 +485,8 @@ cycle.</p>
 bobbing. It was all the confirmation they needed. The system wanted to
 work. It just needed a little help.</p>
 <hr />
-<h2 id="chapter-3"><strong>Chapter 3</strong></h2>
+<h1 id="chapter-3">Chapter 3</h1>
+<h2 id="chapter-3-1"><strong>Chapter 3</strong></h2>
 <p>The sky over Thursday did not bruise or darken; it simply faded. The
 blue leached away into a uniform, luminous grey, the color of a pigeon’s
 wing. The air went still and thick, holding its breath. By the time
