update format file (W726)

--- a/formats/climate_conscious_urban_realism_nature_civilization_complete.html
+++ b/formats/climate_conscious_urban_realism_nature_civilization_complete.html
@@ -180,18 +180,11 @@
 </div>
 <h1 id="chapter-1">Chapter 1</h1>
 <h2 id="chapter-1-1"><strong>Chapter 1</strong></h2>
-<p>The rain in the city didn’t fall anymore; it arrived. It came in
-great, grey, horizontal sieves, scouring the glass and steel, finding
-every crack in the window seals of the old brick walk-ups. Leo Thorne
-watched it from the third-floor landing of 447 Morgan Street, a building
-that listed to the east like a ship taking on water. He wasn’t watching
-the rain itself, but what it did. The way it sheeted down the fire
-escape, how it pooled in the concave depression of the roof across the
-alley, a temporary, quivering silver lake. How it dripped from a
-specific broken gutter in a persistent, metronomic tap onto the lid of a
-blue recycling bin. That tap was off-rhythm. It meant the bin was nearly
-full, which meant the super, Sal, was behind. Information. Everything
-was information.</p>
+<p>Concrete breathed. Its pores, clogged with decades of exhaust,
+strained to draw the damp morning through steel canyons. Above the
+gridlock, a single oak on a rooftop flexed its roots against the
+retaining wall, each slow crack a calendar marking the city’s brittle
+age.</p>
 <p>He turned the key, felt the deadbolt slide back with a gritty sigh.
 The air inside was warm and close, smelling of old wood, turmeric, and
 the faint, damp-dog scent of the city itself. Not a dog, exactly. More
